internal/assets/static/main.css
/* ... */
.widget + .widget {
    margin-top: var(--widget-gap);
}

.list-horizontal-text {
    display: flex;
    list-style: none;
    flex-wrap: wrap;
    align-items: center;
}

.list-horizontal-text > *:not(:last-child)::after {
    content: '•';
    color: var(--color-text-subdue);
    margin: 0 0.5rem;
    position: relative;
    top: 0.1rem;
}

.header-container {
    margin-top: calc(var(--widget-gap) / 2);
    --header-height: 45px;
    --header-items-gap: 2.5rem;
}

.header {
    display: flex;
    height: var(--header-height);
    gap: var(--header-items-gap);
}

.logo {
    height: 100%;
    line-height: var(--header-height);
    font-size: 2rem;
    color: var(--color-text-highlight);
    border-right: 1px solid var(--color-widget-content-border);
    padding-right: var(--widget-content-horizontal-padding);
}

.logo:has(img) {
    display: flex;
    align-items: center;
}

.logo img {
    max-height: 2.7rem;
}

.nav {
    height: 100%;
    gap: var(--header-items-gap);
}

.nav .nav-item {
    line-height: var(--header-height);
}

.footer {
    padding-bottom: calc(var(--widget-gap) * 1.5);
    padding-top: calc(var(--widget-gap) / 2);
    animation: loadingContainerEntrance 200ms backwards;
    animation-delay: 150ms;
}

.mobile-navigation, .mobile-reachability-header {
    display: none;
}

.nav-item {
    display: block;
    height: 100%;
    border-bottom: 2px solid transparent;
    transition: color .3s, border-color .3s;
    font-size: var(--font-size-h3);
}

.nav-item:not(.nav-item-current):hover {
    border-bottom-color: var(--color-text-subdue);
    color: var(--color-text-highlight);
}

.nav-item.nav-item-current {
    border-bottom-color: var(--color-primary);
    color: var(--color-text-highlight);
}

.release-source-icon {
    width: 16px;
    height: 16px;
    flex-shrink: 0;
    opacity: 0.4;
}

.market-chart {
    margin-left: auto;
    width: 6.5rem;
    flex-shrink: 0;
}

.market-chart svg {
    width: 100%;
}

.market-values {
    min-width: 8rem;
}

.carousel-container {
    position: relative;
}

.carousel-container::before, .carousel-container::after {
    content: '';
    position: absolute;
    width: 2rem;
    top: 0;
    bottom: 1rem;
    z-index: 10;
    opacity: 0;
    pointer-events: none;
    transition-duration: 0.2s;
}

.carousel-container::before {
    left: 0;
    background: linear-gradient(to right, var(--color-background), transparent);
}

.carousel-container::after {
    right: 0;
    background: linear-gradient(to left, var(--color-background), transparent);
}

.carousel-container.show-left-cutoff::before, .carousel-container.show-right-cutoff::after {
    opacity: 1;
}

.video-thumbnail {
    width: 100%;
    aspect-ratio: 16 / 8.9;
    object-fit: cover;
    border-radius: var(--border-radius) var(--border-radius) 0 0;
}

.video-title {
    margin-bottom: auto;
    overflow: hidden;
    display: block;
    text-overflow: ellipsis;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    display: -webkit-box;
    -webkit-box-orient: vertical;
}

.search-icon {
    width: 2.3rem;
}

.search-icon-container {
    position: relative;
    flex-shrink: 0;
}

/* gives a wider hit area for the 3 people that will notice the animation : ) */
.search-icon-container::before {
    content: '';
    position: absolute;
    inset: -1rem;
}

.search-icon-container:hover > .search-icon {
    animation: searchIconHover 2.9s forwards;
}

@keyframes searchIconHover {
    0%, 39% { translate: 0 0; }
    20% { scale: 1.3; }
    40% { scale: 1; }
    50% { translate: -30% 30%; }
    70% { translate: 30% -30%; }
    90% { translate: -30% -30%; }
    100% { translate: 0 0; }
}

.search {
    transition: border-color .2s;
    position: relative;
}

.search:hover {
    border-color: var(--color-text-subdue);
}

.search:focus-within {
    border-color: var(--color-primary);
}

.search-input {
    border: 0;
    background: none;
    width: 100%;
    height: 6rem;
    font: inherit;
    outline: none;
    color: var(--color-text-highlight);
}

.search-input::placeholder {
    color: var(--color-text-base-muted);
    opacity: 1;
}

.search-bangs { display: none; }

.search-bang {
    border-radius: calc(var(--border-radius) * 2);
    background: var(--color-widget-background-highlight);
    padding: 0.3rem 1rem;
    flex-shrink: 0;
    font-size: var(--font-size-h5);
    animation: searchBangsEntrance .3s cubic-bezier(0.25, 1, 0.5, 1) backwards;
}

@keyframes searchBangsEntrance {
    0% {
        opacity: 0;
        transform: translateX(-10px);
    }
}

.search-bang:empty {
    display: none;
}

.forum-post-list-item {
    display: flex;
    gap: 1.2rem;
}

.forum-post-list-thumbnail {
    flex-shrink: 0;
    width: 6rem;
    height: 4.1rem;
    border-radius: var(--border-radius);
    object-fit: cover;
    border: 1px solid var(--color-separator);
    margin-top: 0.1rem;
}

.forum-post-tags-container {
    transform: translateY(-0.15rem);
}

.bookmarks-group {
    --bookmarks-group-color: var(--color-primary);
}

.bookmarks-group-title {
    color: var(--bookmarks-group-color);
}

.bookmarks-group .bookmarks-link::after {
    color: var(--bookmarks-group-color);
}

.bookmarks-icon-container {
    margin-block: 0.1rem;
    background-color: var(--color-widget-background-highlight);
    border-radius: var(--border-radius);
    padding: 0.5rem;
    opacity: 0.7;
}

.bookmarks-icon {
    width: 20px;
    height: 20px;
    opacity: 0.8;
}

:root:not(.light-scheme) .simple-icon {
    filter: invert(1);
}

.calendar-day {
    width: calc(100% / 7);
    text-align: center;
    padding: 0.6rem 0;
}


.calendar-day-today {
    border-radius: var(--border-radius);
    background-color: hsl(var(--bghs), calc(var(--scheme) (var(--scheme) (var(--bgl)) + 6%)));
    color: var(--color-text-highlight);
}

.dns-stats-totals {
    transition: opacity .3s;
    transition-delay: 50ms;
}
/* ... */

